--- a/HTTPhost/index.html
+++ b/HTTPhost/index.html
@@ -18,6 +18,8 @@ v.src=c,v.async=!0,v.id="_uasdk",v.rel=e,t.head.appendChild(v)}(window,document,
     appKey: 'V5kIBVz2Sty8Rq3oSWps9A',
     token: 'MTpWNWtJQlZ6MlN0eThScTNvU1dwczlBOjgzQUJzVHRNem5pTm83TGlaaldiNVd6X3d1Q2NrUUh4SXdKMHQ1QmV2ZkE',
     vapidPublicKey: 'BIuF1XnM48hMVwL7HYyfoBPcdCCiVmCRTgOKqV8LIKUDLZBJJSE7FyuT1j23GGhqmLv_u5xJTwmgpKKpPNQvmGE='
+    //for https
+      secureIframeUrl: 'https://bhaskarzemoso.github.io/HTTPhost/web-push-secure-bridge.html'
   });
 
 </script>
