--- a/HTTPhost/index.html
+++ b/HTTPhost/index.html
@@ -19,7 +19,7 @@ v.src=c,v.async=!0,v.id="_uasdk",v.rel=e,t.head.appendChild(v)}(window,document,
     token: 'MTpWNWtJQlZ6MlN0eThScTNvU1dwczlBOjgzQUJzVHRNem5pTm83TGlaaldiNVd6X3d1Q2NrUUh4SXdKMHQ1QmV2ZkE',
     vapidPublicKey: 'BIuF1XnM48hMVwL7HYyfoBPcdCCiVmCRTgOKqV8LIKUDLZBJJSE7FyuT1j23GGhqmLv_u5xJTwmgpKKpPNQvmGE='
     //for https
-      secureIframeUrl: 'https://bhaskarzemoso.github.io/HTTPhost/web-push-secure-bridge.html'
+      secureIframeUrl: 'web-push-secure-bridge.html'
   });
 
 </script>
